# BankModelFactory

./: .gitignore  README.md  pyproject.toml
configs/: data.yaml  defaults.yaml  train.yaml
notebooks/: 02_preprocessing.ipynb
src/bankmodelfactory/: __init__.py
src/bankmodelfactory/data/: __init__.py  bank_dataset.py  load.py  split.py
src/bankmodelfactory/dlmodels/: __init__.py  base_model.py  binary_advanced.py  binary_medium.py  binary_simple.py  factory.py
src/bankmodelfactory/evaluation/: evaluator.py
src/bankmodelfactory/features/: FeaturePipeline.py  __init__.py  behavioral_transformer.py  business_encoder.py  feature_engineering.py  feature_engineering_simple.py  semantic_cleaner.py
src/bankmodelfactory/training/: trainer.py
src/bankmodelfactory/utils/: config.py  device.py  logger.py  path.py  preview.py
